fix broken images on mobile meet the team page

--- a/app/assets/stylesheets/hub.sass
+++ b/app/assets/stylesheets/hub.sass
@@ -24,7 +24,7 @@
       &#hub_staff_4
         background-image: image-url('people/staff-support.jpg')
       +mobile
-        height: 500px
+        height: 300px
 
 .hubs.top.box
   margin-top: 1.5em
